<resources>
    <string name="app_name">HomeVisitNurse</string>
    <string name="title">Home Visit Nurse</string>
    <string name="IDHint">Enter your email </string>
    <string name="passwordHint">Enter your password </string>
    <string name="passwordHintConfirm">Confirm your password </string>
    <string name="nameHint">Enter your name </string>
    <string name="emailHint">Enter your email here</string>
    <string name="btnSignIn">Sign in</string>
    <string name="btnRegistrate">Registrate</string>
    <string name="title1">Schedule</string>
    <string name="editSchedule">Edit schedule</string>
    <string name="searchTB">Search</string>
    <string name="search">Search</string>
    <string name="infoTB">Info</string>
    <string name="nameTB">Name</string>
    <string name="surnameTB">Surname</string>
    <string name="addressTB">Address of patient</string>
    <string name="find">FIND</string>
    <string name="moreInfo">MORE INFO ABOUT PATIENT</string>
    <string name="patientInfo">Patient info</string>
    <string name="save">SAVE</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>



    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="title2">Schedule</string>
    <string name="text_accounts">All Accounts</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>


</resources>

