<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patientInfo"
        android:textSize="40sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowRadius="5.0"
        android:shadowDx="5.0"
        android:shadowDy="5.0"
        android:background="@color/red"
        android:gravity="center_horizontal"
        android:padding="30dp"
        />
    <TextView
        android:id="@+id/namePatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/titleInfo"
        />
    <TextView
        android:id="@+id/surnamePatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/namePatient"
        />
    <RecyclerView
        android:id="@+id/List"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surnamePatient"
        >
    </RecyclerView>

    <EditText
        android:id="@+id/newData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:layout_below="@+id/List"
        android:layout_marginTop="10dp"
        android:layout_marginRight="200dp"
        android:layout_marginEnd="200dp"/>
    <Button
        android:id="@+id/saveBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/List"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"

        />
    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />
    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        />



</RelativeLayout>
