<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background0"
    android:id="@+id/relativeLayout1">


    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowRadius="5.0"
        android:shadowDx="5.0"
        android:shadowDy="5.0"
        android:layout_marginTop="80dp" />
    <EditText
        android:id="@+id/editID1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/username_icon1"
        android:layout_toEndOf="@+id/username_icon1"
        android:hint="@string/nameHint"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_below="@+id/title1"
        android:inputType="textPersonName"/>
    <ImageView
        android:padding="10dp"
        android:id="@+id/username_icon1"
        android:src="@drawable/signinnurse"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/title1"
        tools:ignore="ContentDescription"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/edit_email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/email_icon1"
        android:layout_toEndOf="@+id/email_icon1"
        android:hint="@string/emailHint"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_below="@+id/username_icon1"
        android:inputType="textEmailSubject"/>
    <ImageView
        android:padding="10dp"
        android:id="@+id/email_icon1"
        android:src="@drawable/email"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editID1"
        tools:ignore="ContentDescription"
        android:layout_marginTop="15dp" />
    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/password_icon1"
        android:layout_toEndOf="@+id/password_icon1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_below="@+id/edit_email1"
        android:inputType="textPassword"
        android:hint="@string/passwordHint"
        />
    <ImageView
        android:padding="10dp"
        android:id="@+id/password_icon1"
        android:src="@drawable/locked"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/edit_email1"
        tools:ignore="ContentDescription"
        android:layout_marginTop="15dp"
        />
    <EditText
        android:id="@+id/password1Confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/password_icon1Confirm"
        android:layout_toEndOf="@+id/password_icon1Confirm"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_below="@+id/password1"
        android:inputType="textPassword"
        android:hint="@string/passwordHintConfirm"
        />
    <ImageView
        android:padding="10dp"
        android:id="@+id/password_icon1Confirm"
        android:src="@drawable/locked"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/password1"
        tools:ignore="ContentDescription"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/btnRegistration1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistrate"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@+id/password_icon1"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="80dp"
        />

    <TextView
        android:id="@+id/txtSignin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="Already a member? Signin"
        android:textSize="16dp"
        android:layout_below="@+id/btnRegistration1"/>




</RelativeLayout>